--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "consola": "^2.15.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0"
   }
